# microservice-lisp

./: Dockerfile  README.md  config.alloy  docker-compose.yml  main.py  prometheus.yaml  pyproject.toml  tempo.yaml
src/: apply.py  common.py  config.py  eval.py  exec.py  globals.py
